--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ td {
 
 td:hover{
     cursor: pointer;
+    opacity: 0.7;
 }
 
 .x {
@@ -94,7 +95,7 @@ td:hover{
 button{
     text-align: center;
     position: relative;
-    top: -150px;
+    top: -50px;
     margin: 0px auto;
     width: 120px;
     height: 45px;
